2008-10-25  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp (TextualOutputPort::putDatum): Fixed the bug of writing compiler-insn.

2008-10-24  higepon  <higepon@users.sourceforge.jp>

        * scripts/binary2c.scm (main): Added for Fasl.

        * PortProcedures.cpp (getU8Ex): Fixed the EOF bug.
                     (openInputFileEx): Added open-input-file.

        * library.scm (condition-printer): Fixed the double fault bug.

        * UtilityProcedures.cpp (makeInstructionEx): Added make-compiler-instruction and make-instruction.

        * reader.y : Not to use append for terrible bad performance.

        * scripts/binary2c.scm (main): Added for Fasl.

2008-10-23  higepon  <higepon@users.sourceforge.jp>

        * Fasl.cpp : Added for Fast loading.

2008-10-21  higepon  <higepon@users.sourceforge.jp>

        * library.scm (show-profile): Fixed profiler SEGV.

        * VM.cpp (VM::run): Fixed the bug of REFER_GLOBAL_CALL.

        * Equivalent.h (scheme): Fixed bug of equality of Record.

        * lib/srfi/%3A98.ss (srfi): Added srfi 98 support.

        * R6RS interactive REPL works well.
               : (import ...) on REPL works well also.

        * UtilityProcedures.cpp (unGenSym): Added.

        * UtilityProcedures.h: rename freeproc.h to UtilityProcedures.h.

2008-10-20  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp : Removed "set! to unbound variable" check on ASSIGN_GLOBAL for psyntax.

        * library.scm (call-with-port): Added call-with-port.

        * PortProcedures.cpp (getLineEx): Added get-line.

2008-10-19  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp : Added utf16->string and string->utf16.

        * ByteVectorProcedures.cpp : Added utf32->string and string->utf32.

        * UTF16Codec.h : Added.

        * UTF16Codec.cpp : Added.

        * UTF32Codec.h : Added.

        * UTF32Codec.cpp : Added.

        * ByteVectorProcedures.cpp : Added string->utf8.
